--- a/style/main.css
+++ b/style/main.css
@@ -483,7 +483,7 @@ hr {
   color: #f9f6f2;
   background: #edcf72;
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
-  font-size: 45px;
+  font-size: 0px;
 }
 @media screen and (max-width: 520px) {
   /* line 368, main.scss */
@@ -496,7 +496,7 @@ hr {
   color: #f9f6f2;
   background: #edcc61;
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
-  font-size: 45px;
+  font-size: 0px;
 }
 @media screen and (max-width: 520px) {
   /* line 368, main.scss */
@@ -509,7 +509,7 @@ hr {
   color: #f9f6f2;
   background: #edc850;
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
-  font-size: 45px;
+  font-size: 0px;
 }
 @media screen and (max-width: 520px) {
   /* line 368, main.scss */
@@ -522,12 +522,12 @@ hr {
   color: #f9f6f2;
   background: #edc53f;
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
-  font-size: 35px;
+  font-size: 0px;
 }
 @media screen and (max-width: 520px) {
   /* line 368, main.scss */
   .tile.tile-1024 .tile-inner {
-    font-size: 15px;
+    font-size: 0px;
   }
 }
 /* line 368, main.scss */
@@ -535,12 +535,12 @@ hr {
   color: #f9f6f2;
   background: #edc22e;
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
-  font-size: 35px;
+  font-size: 0px;
 }
 @media screen and (max-width: 520px) {
   /* line 368, main.scss */
   .tile.tile-2048 .tile-inner {
-    font-size: 15px;
+    font-size: 0px;
   }
 }
 /* line 418, main.scss */
@@ -1015,7 +1015,7 @@ hr {
 
   /* line 546, main.scss */
   .tile .tile-inner {
-    font-size: 1px;
+    font-size: 0px;
   }
 
   /* line 551, main.scss */
@@ -1033,54 +1033,71 @@ hr {
 /* line 564, main.scss */
 .tile.tile-2 .tile-inner {
   background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/OBOYABATLI.jpg?itok=GVGao7pR);
+  background-size: cover;
 }
 
-/* line 568, main.scss */
+/* line 569, main.scss */
 .tile.tile-4 .tile-inner {
   background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/business/mbashshur.jpg?itok=NiL2s-Yh);
+  background-size: cover;
 }
 
-/* line 572, main.scss */
+/* line 574, main.scss */
 .tile.tile-8 .tile-inner {
   background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/HANNAHCHANG.jpg?itok=pLwPNYti);
+  background-size: cover;
 }
 
-/* line 576, main.scss */
+/* line 579, main.scss */
 .tile.tile-16 .tile-inner {
   background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/PCRAMA.jpg?itok=L6oYRNYr);
-}
-
-/* line 580, main.scss */
-.tile.tile-32 .tile-inner {
-  background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/XSGENG.jpg?itok=BPdSk0GS);
+  background-size: cover;
 }
 
 /* line 584, main.scss */
+.tile.tile-32 .tile-inner {
+  background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/XSGENG.jpg?itok=BPdSk0GS);
+  background-size: cover;
+}
+
+/* line 589, main.scss */
 .tile.tile-64 .tile-inner {
   background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/smu/dbhave.jpeg?itok=B5otQmTi);
+  background-size: cover;
 }
 
-/* line 588, main.scss */
+/* line 594, main.scss */
 .tile.tile-128 .tile-inner {
   background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/business/2013_archarya_abhijith_g_0.jpg?itok=IvXCM_fP);
+  background-size: cover;
 }
 
-/* line 592, main.scss */
+/* line 599, main.scss */
 .tile.tile-256 .tile-inner {
   background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/BEGOH.jpg?itok=xfVgNY0A);
-}
-
-/* line 596, main.scss */
-.tile.tile-512 .tile-inner {
-  background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/YFLIM.jpg?itok=cgehGIBi);
-}
-
-/* line 600, main.scss */
-.tile.tile-1024 .tile-inner {
-  background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/LDEMEESTER.jpg?itok=wZwGGoe-);
+  background-size: cover;
 }
 
 /* line 604, main.scss */
+.tile.tile-512 .tile-inner {
+  background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/YFLIM.jpg?itok=cgehGIBi);
+  background-size: cover;
+}
+
+/* line 609, main.scss */
+.tile.tile-1024 .tile-inner {
+  background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/LDEMEESTER.jpg?itok=wZwGGoe-);
+  background-size: cover;
+}
+
+/* line 614, main.scss */
 .tile.tile-2048 .tile-inner {
   background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/TERENCEFAN.jpg?itok=MeXvVXQF);
+  background-size: cover;
+}
+
+/* line 619, main.scss */
+.tile.tile-4096 .tile-inner {
+  background: url(http://www.smu.edu.sg/sites/default/files/styles/faculty_thumb/public/MICHLEE.jpg?itok=_2eJN_yV);
+  background-size: cover;
 }
